src/sass/static/affiliates_ib.scss
.affiliate-ib-content {
    margin: 0 !important;

    h2 {
        font-size: 36px;
        font-weight: 700;
        line-height: 45px;
    }
    h4 {
        font-weight: 500;
    }
    p, a {
        font-size: 18px;
        line-height: 27px;
    }
    #hero {
        display: flex;
        background-image: url('../images/pages/affiliates_ib_landing/background/hero.png');
        background-size: cover;
        background-position: center;
        min-height: 417px;

        h2 {
            font-weight: 300;
            color: $COLOR_WHITE;
        }
    }
    #statistics {
        display: flex;
        align-items: center;
        background: url('../images/pages/contact/banner-bg.svg');
        min-height: 200px;

        h1 {
            font-size: 64px;
            margin: 8px 0;
            padding: 5.5px 0;
        }
        h3 {
            font-size: 24px;
            margin: 0;
            padding: 2px 0;
        }
    }
    #how-it-works {
        background: url('../images/pages/affiliates_ib_landing/background/orange.png');
        background-size: cover;

        p {
            font-size: 22px;
            font-weight: normal;
            line-height: 28px;
        }
        h2 {
            margin: 40px 0;
        }
        h3 {
            font-weight: 700;
            margin: 20px 0;
        }
        p, h2, h3 {
            color: $COLOR_WHITE;
        }
    }
    #who-can-apply {
        padding: 50px 0;

        h4 {
            font-weight: 700;
        }
    }
    #why-partner {
        display: flex;

        h2, h4 {
            margin-top: 25px;
        }
        h4 {
            margin-bottom: 15px;
        }
        img {
            height: 64px;
        }
        @media screen and (max-width: 480px) {
            h4 {
                font-size: 1rem;
            }
            img {
                height: 56px;
            }
        }
    }
    #payment-method {
        .container {
            max-width: 1012px;
        }
        .gr-row {
            max-width: 940px;
            margin: 0 auto;
        }
        h2 {
            margin: 25px 0;
        }
    }
    .type-of-partner {
        .text-align-left {
            text-align: left;
        }
        .container {
            max-width: 780px;

            & > p {
                font-weight: 300;
            }
            h2, h3 {
                margin: 20px 0;
            }
            .has-tabs {
                margin: 20px 0;

                .ui-tabs-nav {
                    border-width: 2px;
                    border-color: $COLOR_ORANGE;
                    margin-bottom: 0;

                    li {
                        padding: 10px;
                        margin: 0;
                        white-space: normal;

                        a {
                            outline: none;
                            width: 100%;
                        }
                        &:first-child {
                            flex-basis: 48%;
                            margin-right: 2%;
                        }
                        &.ui-tabs-active {
                            background: $COLOR_ORANGE;
                        }
                    }
                }
                table {
                    margin-top: 1em;
                    margin-bottom: 1em;
                }
                .gr-show-m {
                    @media screen and (max-width: 480px) {
                        display: flex;
                    }
                }
                #affiliate .tm-a {
                    text-transform: none;
                }
                #ib {
                    &-header {
                        margin: 24px 0;
                        font-size: 28px;
                    }
                    table {
                        th, td:first-child {
                            text-align: left;
                            font-weight: bold;
                            padding-left: 0 10%;
                        }
                        th + th, td + td, th:only-child {
                            text-align: center;
                        }
                        th + th {
                            border-bottom-width: 1px;
                            border-color: $COLOR_WHITE;
                            width: 50%;
                        }
                    }
                }
            }
        }
    }
    .faq {
        background-image: url('../images/pages/affiliates_ib_landing/background/orange.png');
        background-size: cover;
        padding: 40px;

        &-header {
            color: $COLOR_WHITE;
        }
        &-item {
            background-color: $COLOR_WHITE;
            border-radius: 8px;
            margin: 12px;
            padding: 30px;

            &-header {
                font-size: 28px;
                font-weight: 700;
                margin-top: 0;
                line-height: 35px;
            }
            &-content {
                font-size: 16px;
                font-weight: 500;
                text-align: start;
                margin-left: 20px;

                &-image {
                    margin-right: 10px;
                }
                &-image, &-text {
                    vertical-align: middle;
                }
            }
        }
        &-message {
            color: $COLOR_WHITE;
        }
    }
}

